# tabbyset

./: .gitignore  CONTRIBUTING.md  NEWS.rst  README.md  main.py  pyproject.toml
.github/workflows/: release.yaml  test.yaml
tabbyset/file_formats/csv1/: README.md
tests/test_db/: test_id_utils.py
tests/test_file_formats/: csv1_examples.py  csv2_examples.py  test_abstract_reader.py  test_csv1.py  test_csv2.py  test_mhdr_csv.py  test_tcs_jsonl.py
tests/test_file_formats/test_legacy/test_version1/: test_abstract_reader.py  test_csv1.py
tests/test_utils/: test_dhash.py  test_flex_table.py  test_folder.py  test_group_by.py  test_table_queries.py  test_test_cases_plain_reader.py  test_tick_utils.py
