[project]
name = "tabbyset"
version = "0.1.0"
description = "Exactpro basic tooling for working with tests proprietary files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "bump-my-version>=1.2.0",
    "towncrier>=24.8.0",
]

[tool.towncrier]
directory = "changes"
package = "tabbyset"
name = "TabbySet"
